minor spacing fix on table

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 html {
-    max-width: 1000px;
+    max-width: 1200px;
     margin:auto;
     background-color: #1a6fbf;
 }
